# HDRI-Project

./: .gitignore  BUG-REPORT.md  CHANGELOG.md  INSTALL-WINDOWS.md  README.md  package.json
.github/workflows/: build-cuda.yml  build-windows.yml  build.yml  windows.yml
scripts/: build-release.ts
src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  cache.rs  commands.rs  database.rs  enrichment.rs  lib.rs  llm.rs  models.rs  settings.rs
src/app/: globals.css  page.tsx
src/components/: ai-assistant.tsx  floating-ai-tools.tsx  new-project-dialog.tsx  sidebar.tsx  story-chat-panel.tsx
src/components/ui/: sidebar.tsx
src/components/views/: editor-view.tsx  models-view.tsx  projects-view.tsx  settings-view.tsx  world-view.tsx
src/lib/: store.ts  tauri-api.ts  utils.ts
