[package]
name = "nexastory"
version = "0.3.0"
description = "NexaStory - AI-powered creative writing assistant"
authors = ["NexaStory Team"]
edition = "2021"  # Note: OnceLock requires Rust 1.80+ (pinned in rust-toolchain.toml)
license = "MIT"
repository = "https://github.com/nexastory/nexastory"
homepage = "https://nexastory.app"
readme = "README.md"
keywords = ["ai", "llm", "writing", "creative", "tauri"]
categories = ["text-processing", "gui"]

[lib]
name = "nexastory_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]  # (M4) Fix: Removed staticlib — not needed for Windows Tauri app

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "offline"] }  # (H5) Fix: Added offline mode to avoid compile-time DB connection
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
sysinfo = "0.32"
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
once_cell = "1"
num_cpus = "1"
regex = "1"
encoding_rs = "0.8"

# llama.cpp Integration - CPU native build (activée par défaut)
llama-cpp-2 = { version = "0.1.143", optional = true }

[features]
# Windows ONLY - CPU (default) and CUDA (NVIDIA GPU)
default = ["llama-native"]
llama-native = ["dep:llama-cpp-2"]
llama-cuda = ["dep:llama-cpp-2", "llama-cpp-2/cuda"]
# Vulkan removed - CUDA is the preferred GPU option for Windows

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
